--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "route-test",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "react": "^18.2.0",
@@ -15,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-backend": "cd backend && flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
